--- a/assets/scss/_david-droga.scss
+++ b/assets/scss/_david-droga.scss
@@ -12,7 +12,7 @@
                 }
                 // Date
                 .news-date{
-                    background:#ff2b2b;
+                    background:#c7ae24;
                     padding:15px 34px;
                     display: inline-block;
                     position: absolute;
