--- a/assets/scss/_h1-hero.scss
+++ b/assets/scss/_h1-hero.scss
@@ -1,6 +1,6 @@
 
 .slider-height {
-    min-height: 900px;
+    min-height: 750px;
     background-repeat:no-repeat ;
     background-position: center center;
     background-size: cover;
@@ -82,16 +82,16 @@
             -webkit-background-clip: text; /* Clips the background to the text */
             background-clip: text; /* For other browsers that support background-clip on text */
             @media #{$lg} {
-                font-size: 135px;
+                font-size: 55px;
             }
             @media #{$md} {
-                font-size: 110px;
+                font-size: 50px;
             }
             @media #{$sm} {
-                font-size: 72px;
+                font-size: 45px;
             }
             @media #{$xs} {
-                font-size: 42px;
+                font-size: 22px;
             }
         }
     
@@ -161,7 +161,8 @@
                     background: $theme-color;
                 }
                 @media #{$xs} {
-                    margin-bottom: 20px;
+                    font-size: 10px;
+                    margin-bottom: -30px;
                 }
             }
         }
@@ -201,6 +202,16 @@
         right: 0;
         z-index: 0;
         background-repeat: no-repeat;
+        @media #{$lg} {
+        }
+        @media #{$md} {
+        }
+        @media #{$sm} {
+            height: 100%;
+        }
+        @media #{$xs} {
+            height: 100%;
+        }
     }
 }
 
