--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -13,7 +13,7 @@ h4,
 h5,
 h6 {
 	font-family: $font_1;
-	color: #0b1c39;
+	color: #00235b;
 
 	margin-top: 0px;
 	font-style: normal;
@@ -564,109 +564,71 @@ hr {
 		}
 	}
 
-/* 20. preloader */
-	.preloader {
-		background-color: #ffffff;
-		width: 100%;
-		height: 100%;
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		z-index: 999999;
-		-webkit-transition: .6s;
-		-o-transition: .6s;
-		transition: .6s;
-		margin: 0 auto;
-	}
+/* Preloader Container */
+#preloader-active {
+    background-color: #ffffff; /* Ensure background color matches design */
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999; /* Make sure it stays on top of everything */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
-	.preloader .preloader-circle {
-		width: 150px;
-		height: 150px;
-		position: relative;
-		border-style: solid;
-		border-width: 1px;
-		border-top-color:$theme-color;
-		border-bottom-color: transparent;
-		border-left-color: transparent;
-		border-right-color: transparent;
-		z-index: 10;
-		border-radius: 50%;
-		-webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
-		box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
-		background-color: #001c46;
-		-webkit-animation: zoom 2000ms infinite ease;
-		animation: zoom 2000ms infinite ease;
-		-webkit-transition: .6s;
-		-o-transition: .6s;
-		transition: .6s;
-	}
-	.preloader .preloader-circle2 {
-		border-top-color: #c6a632;
-		border: 2px outset;
-	}
-	.preloader .preloader-img {
-		position: absolute;
-		top: 50%;
-		z-index: 200;
-		left: 0;
-		right: 0;
-		margin: 0 auto;
-		text-align: center;
-		display: inline-block;
-		-webkit-transform: translateY(-50%);
-		-ms-transform: translateY(-50%);
-		transform: translateY(-50%);
-		padding-top: 6px;
-		-webkit-transition: .6s;
-		-o-transition: .6s;
-		transition: .6s;
-	}
+/* Preloader Inner Animation */
+.preloader {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
 
-	.preloader .preloader-img img {
-		max-width:135px;
-	}
-	.preloader .pere-text strong{
-		font-weight: 800;
-		color:#e9a51d ;
-		text-transform: uppercase;
-	}
-	@-webkit-keyframes zoom {
-		0% {
-			-webkit-transform: rotate(0deg);
-			transform: rotate(0deg);
-			-webkit-transition: .6s;
-			-o-transition: .6s;
-			transition: .6s;
-		}
+.preloader .preloader-circle {
+    width: 150px;
+    height: 150px;
+    border-style: solid;
+    border-width: 4px;
+    border-top-color: #c7ae24; /* Adjust to theme color */
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-radius: 50%;
+    animation: spin 1.5s linear infinite;
+    background: #00235b;
+}
 
-		100% {
-			-webkit-transform: rotate(360deg);
-			transform: rotate(360deg);
-			-webkit-transition: .6s;
-			-o-transition: .6s;
-			transition: .6s;
-		}
-	}
+.preloader .preloader-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+}
 
-	@keyframes zoom {
-		0% {
-			-webkit-transform: rotate(0deg);
-			transform: rotate(0deg);
-			-webkit-transition: .6s;
-			-o-transition: .6s;
-			transition: .6s;
-		}
+.preloader .preloader-img img {
+    max-width: 100px;
+    height: auto;
+}
 
-		100% {
-			-webkit-transform: rotate(360deg);
-			transform: rotate(360deg);
-			-webkit-transition: .6s;
-			-o-transition: .6s;
-			transition: .6s;
-		}
-	}
+/* Smooth Transition on Page Load */
+body.loaded #preloader-active {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+/* Spinner Animation */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 
 /*-- Section Padding -- */
