--- a/assets/scss/_headerMenu.scss
+++ b/assets/scss/_headerMenu.scss
@@ -142,7 +142,7 @@
                     & > a{
                         padding: 6px 10px !important;
                         font-size: 14px;
-                        color: #0b1c39;
+                        color: #00235b;
                         &:hover{
                             color:$theme-color;
                             background: none;
