--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3041,29 +3041,32 @@ body.loaded #preloader-active {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  position: relative; /* Added for positioning the icon */
-  margin: 0 20px 40px; /* Add more horizontal and vertical spacing */
-  flex: 1 1 calc(33.333% - 40px); /* Adjust width to account for margins */
-  box-sizing: border-box; /* Ensure padding and border are included in the width */
+  position: relative;
+  margin: 0 20px 40px;
+  flex: 1 1 calc(33.333% - 40px);
+  box-sizing: border-box;
 }
 .single-service-card:hover {
-  transform: scale(1.05);
+  transform: translateY(-10px) scale(1.05);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+.single-service-card:hover .card-image img {
+  transform: scale(1.1); /* Scale the image on hover */
 }
 .single-service-card .card-icon {
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 22%; /* Adjust width for a rectangular shape */
-  height: 18%; /* Adjust height for a rectangular shape */
+  width: 22%;
+  height: 18%;
   background-color: #c7ae24;
-  border-radius: 8px; /* Rounded corners for the rectangle */
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   font-size: 16px;
-  z-index: 1; /* Ensure the icon is above other content */
+  z-index: 1;
 }
 
 .card-image {
@@ -3082,28 +3085,34 @@ body.loaded #preloader-active {
   object-fit: cover;
   transition: transform 0.3s ease;
 }
-.card-image:hover img {
-  transform: scale(1.1);
-}
 
 .card-content {
   padding: 20px;
   text-align: center;
   transition: background-color 0.3s ease;
 }
-.card-content:hover {
-  background-color: #f0f8ff;
-}
 .card-content h4 {
+  text-align: left;
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 .card-content p {
+  text-align: left;
   font-size: 14px;
   color: #666;
   margin-bottom: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .card-btn {
@@ -3124,7 +3133,7 @@ body.loaded #preloader-active {
 .services-area1 .row {
   display: flex;
   flex-wrap: wrap;
-  margin: -20px; /* Counteract the margin on cards to align edges */
+  margin: -20px;
 }
 
 .support-company-area .support-wrapper {
@@ -3211,6 +3220,7 @@ body.loaded #preloader-active {
 }
 .support-company-area .support-wrapper .right-content {
   width: 40%;
+  padding-right: 10px;
   position: relative;
 }
 .support-company-area .support-wrapper .right-content .right-img img {
@@ -3237,7 +3247,7 @@ body.loaded #preloader-active {
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .support-company-area .support-wrapper .right-content {
-    width: 100%;
+    width: 85%;
     padding-top: 50px;
   }
 }
@@ -3399,14 +3409,22 @@ body.loaded #preloader-active {
 .single-team .team-img {
   overflow: hidden;
   margin-bottom: 19px;
+  /* Add fixed dimensions for the image container */
+  width: 100%; /* Adjust based on parent container width */
+  max-width: 350px; /* Example size */
+  height: 30rem; /* Example size */
+  position: relative;
 }
 .single-team .team-img img {
+  /* Ensure the image fits inside the container */
   width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image is cropped to fit */
   transform: scale(1);
   transition: all 0.6s ease-out 0s;
 }
 .single-team .team-caption span {
-  color: #ff5f13;
+  color: #c7ae24;
   font-size: 14px;
   font-weight: 500;
   font-family: "Georgia", sans-serif;
@@ -3424,7 +3442,7 @@ body.loaded #preloader-active {
   left: -30px;
   top: 50%;
   transform: translateY(-50%);
-  background: #ff5f13;
+  background: #c7ae24;
 }
 .single-team .team-caption h3 {
   color: #0e132a;
@@ -3433,6 +3451,7 @@ body.loaded #preloader-active {
   font-family: "Georgia", sans-serif;
 }
 
+/* Optional: Hover effect */
 .single-team:hover .team-img img {
   transform: scale(1.1);
 }
@@ -3727,7 +3746,7 @@ body.loaded #preloader-active {
   position: relative;
   border: 0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .project-area .nav-tabs, .about-area .nav-tabs, .contact-section .nav-tabs {
