--- a/assets/scss/_project-area.scss
+++ b/assets/scss/_project-area.scss
@@ -130,8 +130,8 @@
             padding-bottom: 0px;
             position: relative;
             border: 0;
-            display: flex;
-            justify-content: center;
+            display: flex;      
+            justify-content: flex-end;
             @media #{$md}{
                 justify-content: start;
             } 
