--- a/assets/scss/_services_section.scss
+++ b/assets/scss/_services_section.scss
@@ -5,30 +5,34 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    position: relative; /* Added for positioning the icon */
-    margin: 0 20px 40px; /* Add more horizontal and vertical spacing */
-    flex: 1 1 calc(33.333% - 40px); /* Adjust width to account for margins */
-    box-sizing: border-box; /* Ensure padding and border are included in the width */
+    position: relative;
+    margin: 0 20px 40px;
+    flex: 1 1 calc(33.333% - 40px);
+    box-sizing: border-box;
 
     &:hover {
-        transform: scale(1.05);
+        transform: translateY(-10px) scale(1.05);
         box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    &:hover .card-image img {
+        transform: scale(1.1); /* Scale the image on hover */
     }
 
     .card-icon {
         position: absolute;
         top: 0px;
         left: 0px;
-        width: 22%; /* Adjust width for a rectangular shape */
-        height: 18%; /* Adjust height for a rectangular shape */
+        width: 22%;
+        height: 18%;
         background-color: #c7ae24;
-        border-radius: 8px; /* Rounded corners for the rectangle */
+        border-radius: 8px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: #fff;
         font-size: 16px;
-        z-index: 1; /* Ensure the icon is above other content */
+        z-index: 1;
     }
 }
 
@@ -48,10 +52,6 @@
         object-fit: cover;
         transition: transform 0.3s ease;
     }
-
-    &:hover img {
-        transform: scale(1.1);
-    }
 }
 
 .card-content {
@@ -59,21 +59,29 @@
     text-align: center;
     transition: background-color 0.3s ease;
 
-    &:hover {
-        background-color: #f0f8ff;
-    }
-
     h4 {
+        text-align: left;
         font-size: 18px;
         font-weight: 600;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
         color: #333;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     p {
+        text-align: left;
         font-size: 14px;
         color: #666;
         margin-bottom: 20px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
     }
 }
 
@@ -96,5 +104,5 @@
 .services-area1 .row {
     display: flex;
     flex-wrap: wrap;
-    margin: -20px; /* Counteract the margin on cards to align edges */
+    margin: -20px;
 }
