--- a/assets/scss/_team.scss
+++ b/assets/scss/_team.scss
@@ -1,17 +1,27 @@
-
-.single-team{
-    .team-img{
+.single-team {
+    .team-img {
         overflow: hidden;
         margin-bottom: 19px;
-        & img{
+
+        /* Add fixed dimensions for the image container */
+        width: 100%; /* Adjust based on parent container width */
+        max-width: 350px; /* Example size */
+        height: 30rem; /* Example size */
+        position: relative;
+
+        & img {
+            /* Ensure the image fits inside the container */
             width: 100%;
-            transform:scale(1);
+            height: 100%;
+            object-fit: cover; /* Ensures the image is cropped to fit */
+            transform: scale(1);
             transition: all 0.6s ease-out 0s;
         }
     }
-    .team-caption{
-        & span{
-            color:#ff5f13;
+
+    .team-caption {
+        & span {
+            color: #c7ae24;
             font-size: 14px;
             font-weight: 500;
             font-family: $font_3;
@@ -19,6 +29,7 @@
             position: relative;
             margin-left: 30px;
             margin-bottom: 10px;
+
             &::before {
                 position: absolute;
                 content: "";
@@ -28,11 +39,11 @@
                 left: -30px;
                 top: 50%;
                 transform: translateY(-50%);
-                background: 
-                #ff5f13;
+                background: #c7ae24;
             }
         }
-        & h3{
+
+        & h3 {
             color: $heading-color;
             font-weight: 700;
             font-size: 25px;
@@ -41,6 +52,7 @@
     }
 }
 
+/* Optional: Hover effect */
 .single-team:hover .team-img img {
-	transform:scale(1.1);
+    transform: scale(1.1);
 }
