--- a/assets/scss/_project-area.scss
+++ b/assets/scss/_project-area.scss
@@ -73,7 +73,7 @@
                     visibility: visible;
                     i {
                         color: #fff;
-                        background: #ff5f13;
+                        background: #c7ae24;
                     }
                 }
             }
