--- a/assets/scss/_h1-hero.scss
+++ b/assets/scss/_h1-hero.scss
@@ -22,6 +22,7 @@
     min-height: 590px;
     background-repeat:no-repeat ;
     background-position: center center;
+    background-size: cover;
     @media #{$md}{
         min-height: 500px;
     }
