--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -149,6 +149,7 @@
             font-size: 16px;
             line-height: 2;
             margin-bottom: 12px;
+            margin-right: 20px;
             text-align: end;
             & i{
                 color:$theme-color;
