--- a/assets/scss/_david-droga.scss
+++ b/assets/scss/_david-droga.scss
@@ -1,6 +1,6 @@
 .latest-news-area{
     .single-news{
-        background: #00235b;
+        background: #191a33;
         .news-img{
             position: relative;
             overflow: hidden;
