--- a/assets/scss/_project-area.scss
+++ b/assets/scss/_project-area.scss
@@ -10,7 +10,7 @@
             }
             .project-cap{
                 padding: 20px 20px;
-                background:#fafafa;
+                background:#dbdbdb;
                 @include transition(.4s);
                 position: relative;
                 h4{   
