--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer-area{
-    background:#070b11 ;
+    background:#191a33 ;
     position: relative;
     overflow: hidden;
         &::after {
