--- a/assets/scss/_services_section.scss
+++ b/assets/scss/_services_section.scss
@@ -114,7 +114,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: -20px;
-    justify-content: flex-end; /* Align the cards to the left */
+    justify-content: center; /* Align the cards to the left */
 }
 
 /* Responsive adjustments for different screen sizes */
