--- a/assets/scss/_headerMenu.scss
+++ b/assets/scss/_headerMenu.scss
@@ -350,10 +350,11 @@
     font-size: 14px;
     transition: background-color 0.3s ease;
     border-bottom: 1px solid #f1f1f1;
+    border-radius: 15px;
 }
 
 .dropdown-content a:hover {
-    background-color: #4CAF50;
+    background-color: #c7ae24;
 }
 
 .dropdown-content img {
