--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2838,7 +2838,7 @@ body.loaded #preloader-active {
   color: #fff;
   font-size: 16px;
   padding: 10px 24px;
-  border: 2px solid transparent;
+  border: 2px solid #ffffff;
   border-radius: 50px;
   cursor: pointer;
   font-weight: 600;
