--- a/assets/scss/_headerMenu.scss
+++ b/assets/scss/_headerMenu.scss
@@ -333,7 +333,7 @@
     display: none;
     position: absolute;
     background-color: #191a33;
-    width: 100px;
+    width: 100%;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
     z-index: 10000; /* Increase z-index to ensure it stays on top */
     top: 100%;
